--- a/Algoritmos/Algoritmos.vcxproj
+++ b/Algoritmos/Algoritmos.vcxproj
@@ -127,8 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AddElementToMaps.cpp" />
+    <ClCompile Include="ForeachMaps.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Maps.cpp" />
+    <ClCompile Include="PalindromeStack.cpp" />
     <ClCompile Include="QuickSort.cpp" />
+    <ClCompile Include="StackParentesis.cpp" />
     <ClCompile Include="Top.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
