--- a/Algoritmos/Algoritmos.vcxproj
+++ b/Algoritmos/Algoritmos.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SelectionSort.cpp" />
+    <ClCompile Include="InsertionSort.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
